# RootParallelGui

./: CMakeLists.txt  Makefile  README.md  RootParallelGui.kdev4
cmake/: FindQScintilla.cmake  RootMpiInstaller.cmake  RootParallelGuiMacroEditor.cmake  RootParallelGuiMpi.cmake
include/: LinkDef.h  LinkDef_Mpi.h  RootParallelGui.h  RootParallelGuiConfig.h  RootParallelGuiMacroHighlighter.h  RootParallelGuiMpiConfig.h  RootParallelGuiMpiLauncher.h
resources/: RootParallelGuiMpi.qrc
scripts/: rootcint
src/: RootParallelGui.cpp  RootParallelGuiCint.cpp  RootParallelGuiCint.h  RootParallelGuiCintMpi.cpp  RootParallelGuiCintMpi.h  RootParallelGuiConfig.cpp  RootParallelGuiMacroHighlighter.cpp  RootParallelGuiMain.cpp  RootParallelGuiMpiConfig.cpp  RootParallelGuiMpiLauncher.cpp
src/RootParallelGui/: RootParallelGui.cpp  RootParallelGuiMain.cpp  RootParallelGuiMpiLauncher.cpp
uis/RootParallelGui/: RootParallelGui.ui  RootParallelGuiConfig.ui  RootParallelGuiMpiLauncher.ui
uis/RootParallelGuiMpi/: RootParallelGuiMpiConfig.ui  RootParallelGuiMpiLauncher.ui
