project(root-parallel-gui)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0)
FIND_PACKAGE(Qt4 REQUIRED  QtCore QtGui QtNetwork )
FIND_PACKAGE(MPI)
INCLUDE(CMakeForceCompiler)
CMAKE_FORCE_CXX_COMPILER(mpic++ "MPI C++ Compiler")
ADD_DEFINITIONS( -Wall -g )

SET(ROOTSYS "/usr")
SET(ROOTVERSION "5.32")
SET(PLUGIN_NAME "root-parallel-gui")

INCLUDE("${CMAKE_SOURCE_DIR}/cmake/RootMpiInstaller.cmake")


INCLUDE_DIRECTORIES( ${MPI_INCLUDE_DIRS} "${ROOTSYS}/include/root" "${CMAKE_SOURCE_DIR}/include" "${CMAKE_SOURCE_DIR}/src/" "${CMAKE_SOURCE_DIR}" )

LINK_DIRECTORIES( ${MPI_LIBRARY_DIRS} "${ROOTSYS}/lib/root" )

#ROOTSYS should be loaded from environment variable
SET(CMAKE_INSTALL_PREFIX ${ROOTSYS})



SET(ROOT_LIBS Core Matrix MathCore Cint Net RIO Hist )

SET(ROOT_PARALLEL_GUI_MPI True)

IF(ROOT_PARALLEL_GUI_MPI)
INCLUDE(${CMAKE_SOURCE_DIR}/cmake/RootParallelGuiMpi.cmake)
ENDIF()


SET(ROOT_PARALLEL_GUI_SRC
${CMAKE_SOURCE_DIR}/src/RootParallelGui.cpp
${CMAKE_SOURCE_DIR}/src/RootParallelGuiCint.cpp
)

SET(ROOT_PARALLEL_GUI_MOC_HDRS
${CMAKE_SOURCE_DIR}/include/RootParallelGui.h
)

SET(ROOT_PARALLEL_GUI_MPI_RCS
   ${CMAKE_SOURCE_DIR}/resources/RootParallelGui.qrc
)

SET(ROOT_PARALLEL_GUI_UIS
   ${CMAKE_SOURCE_DIR}/uis/RootParallelGui/RootParallelGui.ui
)


QT4_ADD_RESOURCES(ROOT_PARALLEL_GUI_RCS_SRCS 
                    ${ROOT_PARALLEL_GUI_MPI_RCS}
)


QT4_WRAP_UI(ROOT_PARALLEL_GUI_UIS_HDRS
   ${ROOT_PARALLEL_GUI_UIS}
)

QT4_WRAP_CPP( ROOT_PARALLEL_GUI_MOC_SRCS
   ${ROOT_PARALLEL_GUI_MOC_HDRS}
)

ADD_LIBRARY(ParallelGui SHARED
${ROOT_PARALLEL_GUI_SRC}
${ROOT_PARALLEL_GUI_RCS_SRCS}
${ROOT_PARALLEL_GUI_UIS_HDRS}
${ROOT_PARALLEL_GUI_MOC_SRCS}
)

TARGET_LINK_LIBRARIES(ParallelGui ${ROOT_LIBS} QtCore QtGui )

SET(ROOT_PARALLEL_GUI_MAIN_SRCS ${CMAKE_SOURCE_DIR}/src/RootParallelGuiMain.cpp)

ADD_EXECUTABLE(RootParallelGui
${ROOT_PARALLEL_GUI_MAIN_SRCS}
)

TARGET_LINK_LIBRARIES(RootParallelGui ParallelGui ParallelGuiMpi ${ROOT_LIBS} QtCore QtGui)



MINSTALLFILE("DOC" ${ROOTMPITUTORIALSDIR})

INCLUDE(CPack)
